--- a/dio-spring-security/pom.xml
+++ b/dio-spring-security/pom.xml
@@ -54,10 +54,17 @@
 			<scope>test</scope>
 		</dependency>
 
-	<!-- SPRING DATA JPA -->
+		<!-- SPRING DATA JPA -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+	<!-- Banco em Memoria -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
